# self-supervised-representation-learning

./: .gitignore  README.md  pyproject.toml
configs/: contrastive_benchmark.yaml  default.yaml  masked_benchmark.yaml  vicreg_benchmark.yaml
scripts/: run_benchmark.py
src/ssl_repr/: __init__.py
src/ssl_repr/augmentations/: __init__.py  tabular.py
src/ssl_repr/contrastive/: __init__.py  augmentations.py  metrics.py  simclr.py
src/ssl_repr/data/: __init__.py  base.py  cluster_dgp.py  structured_dgp.py
src/ssl_repr/evaluation/: __init__.py  metrics.py  report.py  runner.py
src/ssl_repr/masked/: __init__.py  metrics.py  trainer.py
src/ssl_repr/models/: __init__.py  encoder.py  projection_head.py
src/ssl_repr/utils/: seed.py
src/ssl_repr/vicreg/: __init__.py  trainer.py
tests/: test_contrastive.py  test_dgp_invariants.py  test_masked_ae.py  test_vicreg.py
